--- a/KommuneEditor/MainWindow.xaml
+++ b/KommuneEditor/MainWindow.xaml
@@ -10,19 +10,33 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Functions">
                 <MenuItem Header="Create New Data" Command="{Binding Path=CreateCommand}" />
+                <MenuItem Header="Manage Data" Command="{Binding Path=DataCommand}" />
                 <Separator />
                 <MenuItem Header="Clear fields" Command="{Binding Path=ClearCommand}" />
             </MenuItem>
         </Menu>
         <Grid>
             <StackPanel Orientation="Vertical" Margin="10">
-                <ComboBox ItemsSource="{Binding DataList}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding SelectedIdComboBox1}" />
-                <ComboBox ItemsSource="{Binding DataList}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding SelectedIdComboBox2}" />
-                <ComboBox ItemsSource="{Binding DataList}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding SelectedIdComboBox3}" />
+                <ComboBox ItemsSource="{Binding CityOptions}" SelectedItem="{Binding SelectedCity}" />
+
+                <ComboBox Grid.Row="0" ItemsSource="{Binding ???}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ???}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <ComboBox Grid.Row="0" ItemsSource="{Binding ???}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ???}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
 
                 <Button Content="Search" Command="{Binding SearchCommand}" Margin="0,10,0,0" />
 
-                <DataGrid ItemsSource="{Binding DataList}" AutoGenerateColumns="True" Margin="0,10,0,0" />
+                <DataGrid ItemsSource="{Binding BindData}" AutoGenerateColumns="True" Margin="0,10,0,0" />
             </StackPanel>
         </Grid>
     </DockPanel>
