--- a/KommuneEditor/MainWindow.xaml
+++ b/KommuneEditor/MainWindow.xaml
@@ -17,26 +17,30 @@
         </Menu>
         <Grid>
             <StackPanel Orientation="Vertical" Margin="10">
-                <ComboBox ItemsSource="{Binding CityOptions}" SelectedItem="{Binding SelectedCity}" />
+                <TextBlock Text="Kommune"/>
+                <TextBox Grid.Row="1" Grid.Column="6" Height="22" HorizontalAlignment="Stretch" VerticalAlignment="Top" Text="{Binding Path=City}" />
+                <TextBlock Text="Gruppe"/>
+                <TextBox Grid.Row="1" Grid.Column="6" Height="22" HorizontalAlignment="Stretch" VerticalAlignment="Top" Text="{Binding Path=Gruppe}" />
+                <TextBlock Text="Aarstal"/>
+                <TextBox Grid.Row="1" Grid.Column="6" Height="22" HorizontalAlignment="Stretch" VerticalAlignment="Top" Text="{Binding Path=Year}" />
+                
+                <Button Content="Search" Command="{Binding Path=SearchCommand}" Margin="0,10,0,0" />
 
-                <ComboBox Grid.Row="0" ItemsSource="{Binding ???}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding ???}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-                <ComboBox Grid.Row="0" ItemsSource="{Binding ???}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding ???}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-
-                <Button Content="Search" Command="{Binding SearchCommand}" Margin="0,10,0,0" />
-
-                <DataGrid ItemsSource="{Binding BindData}" AutoGenerateColumns="True" Margin="0,10,0,0" />
+                <DataGrid Name="grid" IsReadOnly="True" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" Grid.Row="2" Grid.ColumnSpan="8" ItemsSource="{Binding BindData}">
+                    <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}">
+                            
+                        </Style>
+                    </DataGrid.RowStyle>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Data ID" Width="50" Binding="{Binding DataID}" />
+                        <DataGridTextColumn Header="KomNr" Width="50" Binding="{Binding KomNr}" />
+                        <DataGridTextColumn Header="By" Width="100" Binding="{Binding City}" />
+                        <DataGridTextColumn Header="Gruppe" Width="100" Binding="{Binding Gruppe}" />
+                        <DataGridTextColumn Header="Aarstal" Width="50" Binding="{Binding Year}" />
+                        <DataGridTextColumn Header="Nummer" Width="*" Binding="{Binding Num}" />
+                    </DataGrid.Columns>
+                </DataGrid>
             </StackPanel>
         </Grid>
     </DockPanel>
