--- a/KommuneEditor/MainWindow.xaml
+++ b/KommuneEditor/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Functions">
                 <MenuItem Header="Create New Data" Command="{Binding Path=CreateCommand}" />
-                <MenuItem Header="Manage Data" Command="{Binding Path=DataCommand}" />
+                <MenuItem Header="Manage Kommuner" Command="{Binding Path=KommuneCommand}" />
                 <Separator />
                 <MenuItem Header="Clear fields" Command="{Binding Path=ClearCommand}" />
             </MenuItem>
