--- a/KommuneEditor/View/UpdateWindow.xaml
+++ b/KommuneEditor/View/UpdateWindow.xaml
@@ -5,8 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KommuneEditor.View"
         mc:Ignorable="d"
-        Title="UpdateWindow" Height="450" Width="800">
+              Title="Modify address" Height="470" Width="440" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.Resources>
+            <DataTemplate DataType="{x:Type ValidationError}">
+                <TextBlock FontStyle="Italic" FontSize="10" Foreground="Red" HorizontalAlignment="Right" VerticalAlignment="Top" Text="{Binding Path=ErrorContent}" />
+            </DataTemplate>
+        </Grid.Resources>
+        <TextBlock Text="Data ID" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,20,0,0" />
+        <TextBlock Text="Kommune Nr." HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,70,0,0" />
+        <TextBlock Text="By" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,110,0,0" />
+        <TextBlock Text="Gruppe" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,170,0,0" />
+        <TextBlock Text="Aarstal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,210,0,0" />
+        <TextBlock Text="Nummer" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,270,0,0" />
+        <TextBox IsReadOnly="True" Background="LightGray" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,20,0,0" Width="80" Height="22" Text="{Binding Path=DataId}" />
+        <TextBox Name="txtKommuneNr" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,70,0,0" Width="80" Height="22" Text="{Binding Path=KomNr}" />
+        <TextBox Name="txtCity" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,110,0,0" Width="150" Height="22" Text="{Binding Path=City, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{x:Null}" />
+        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,135,0,0" Height="20" Content="{Binding ElementName=txtCity, Path=(Validation.Errors).CurrentItem}" />
+        <TextBox Name="txtGruppe" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,170,0,0" Width="280" Height="22" Text="{Binding Path=Gruppe}" />
+        <TextBox Name="txtAarstal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,210,0,0" Width="50" Height="22" Text="{Binding Path=Year, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{x:Null}" />
+        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,235,0,0" Height="20" Content="{Binding ElementName=txtAarstal, Path=(Validation.Errors).CurrentItem}" />
+        <TextBox Name="txtNummer" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,270,0,0" Width="280" Height="22" Text="{Binding Path=Num, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{x:Null}" />
+        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Top" Margin="120,295,0,0" Height="20" Content="{Binding ElementName=txtNummer, Path=(Validation.Errors).CurrentItem}" />
+      
+        <Button Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150,380,0,0" Width="70" Height="25" Command="{Binding Path=RemCommand}" />
+        <Button Content="Ok" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="240,380,0,0" Width="70" Height="25" Command="{Binding Path=ModCommand}" />
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="330,380,0,0" Width="70" Height="25" Command="{Binding Path=CloseCommand}" />
     </Grid>
 </Window>
